--- a/ELibraryManagement/ELibraryManagement.csproj
+++ b/ELibraryManagement/ELibraryManagement.csproj
@@ -2155,6 +2155,7 @@
     <Content Include="Fontawesome\svgs\solid\yen-sign.svg" />
     <Content Include="Fontawesome\svgs\solid\yin-yang.svg" />
     <Content Include="Fontawesome\svgs\solid\z.svg" />
+    <Content Include="homepage.aspx" />
     <Content Include="images\adminuser.png" />
     <Content Include="images\book-online.png" />
     <Content Include="images\books.png" />
@@ -2173,6 +2174,13 @@
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="homepage.aspx.cs">
+      <DependentUpon>homepage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="homepage.aspx.designer.cs">
+      <DependentUpon>homepage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
