--- a/ELibraryManagement/ELibraryManagement.csproj
+++ b/ELibraryManagement/ELibraryManagement.csproj
@@ -2173,6 +2173,7 @@
     <Content Include="images\search-online.png" />
     <Content Include="images\sign-up.png" />
     <Content Include="images\writer.png" />
+    <Content Include="IssueBook.aspx" />
     <Content Include="PublisherManagement.aspx" />
     <Content Include="RegistrationPage.aspx" />
     <Content Include="UserLogin.aspx" />
@@ -2201,6 +2202,13 @@
     </Compile>
     <Compile Include="homepage.aspx.designer.cs">
       <DependentUpon>homepage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IssueBook.aspx.cs">
+      <DependentUpon>IssueBook.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IssueBook.aspx.designer.cs">
+      <DependentUpon>IssueBook.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublisherManagement.aspx.cs">
