--- a/ELibraryManagement/ELibraryManagement.csproj
+++ b/ELibraryManagement/ELibraryManagement.csproj
@@ -70,6 +70,7 @@
     <Content Include="AdminLogin.aspx" />
     <Content Include="AuthorManagement.aspx" />
     <Content Include="BookInventory.aspx" />
+    <Content Include="book_inventory\books1.png" />
     <Content Include="BootStrap\css\bootstrap.min.css" />
     <Content Include="BootStrap\js\bootstrap.min.js" />
     <Content Include="BootStrap\js\jquery-3.3.1.slim.min.js" />
@@ -2170,6 +2171,8 @@
     <Content Include="images\home-bg.jpg" />
     <Content Include="images\in-homepage-banner.jpg" />
     <Content Include="images\library.png" />
+    <Content Include="images\lib_home.jpg" />
+    <Content Include="images\new_image.jpg" />
     <Content Include="images\publisher.png" />
     <Content Include="images\search-online.png" />
     <Content Include="images\sign-up.png" />
